[gd_scene load_steps=3 format=3 uid="uid://custscreen123"]

[ext_resource type="Script" uid="uid://crg72taa6ni1x" path="res://Scripts/UI/CustomizationScreen.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://b8j2x0p1q4x5y" path="res://Scenes/Characters/Player.tscn" id="2_player"]

[node name="CustomizationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 1)

[node name="PreviewContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_right = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerPreview" parent="PreviewContainer" instance=ExtResource("2_player")]
unique_name_in_owner = true
position = Vector2(100, 0)
scale = Vector2(2, 2)

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -200.0
offset_right = 450.0
offset_bottom = 200.0
grow_horizontal = 1
grow_vertical = 2

[node name="Label" type="Label" parent="UI"]
layout_mode = 2
text = "CUSTOMIZE IDIOT BUM"
horizontal_alignment = 1

[node name="SkinLabel" type="Label" parent="UI"]
layout_mode = 2
text = "Skin Tone"

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2

[node name="Skin1" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Light"

[node name="Skin2" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Tan"

[node name="Skin3" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Dark"

[node name="ClothesLabel" type="Label" parent="UI"]
layout_mode = 2
text = "Clothes"

[node name="RedHoodie" type="Button" parent="UI"]
layout_mode = 2
text = "Equip Red Hoodie"

[node name="BlueHoodie" type="Button" parent="UI"]
layout_mode = 2
text = "Equip Blue Hoodie"

[node name="Spacer" type="Control" parent="UI"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="PlayButton" type="Button" parent="UI"]
layout_mode = 2
text = "ENTER ARENA"

[connection signal="pressed" from="UI/HBoxContainer/Skin1" to="." method="_on_skin_button_pressed" binds= [0]]
[connection signal="pressed" from="UI/HBoxContainer/Skin2" to="." method="_on_skin_button_pressed" binds= [1]]
[connection signal="pressed" from="UI/HBoxContainer/Skin3" to="." method="_on_skin_button_pressed" binds= [2]]
[connection signal="pressed" from="UI/PlayButton" to="." method="_on_play_button_pressed"]
